syntax = "proto3";
package dev.array21.invoicex;

import "entities/org.proto";

message OrgUserScopeListResponse {
  repeated OrgScope orgScopes = 1;
}
